# ai-track

./: README.md
client/: package.json
client/src/app/: page.tsx
client/src/app/chat/: page.tsx
client/src/app/chat/[id]/: page.tsx
client/src/app/demo/: page.tsx
client/src/app/translate/: page.tsx
client/src/components/: ChatApp.tsx  Homepage.tsx  SSEConnection.tsx  StreamingConnection.tsx  index.ts
client/src/features/auth/entities/: index.ts
client/src/features/chat/: ChatApp.tsx
client/src/features/chat/api/: index.ts
client/src/features/chat/hooks/: useChat.tsx
client/src/features/chat/ui/: Bubble.tsx  ChatHeader.tsx  ChatInput.tsx  MessageList.tsx
server/: main.py  pyproject.toml
